<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@mipmap/gema1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="375dp"
        android:layout_height="431dp"
        app:cardBackgroundColor="@color/card"
        app:cardCornerRadius="6dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.164">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/design_default_color_background"
                android:textSize="35sp"
                app:fontFamily="@font/pt_mono" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittext"
                android:drawableLeft="@drawable/ic_action_user"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColor="@color/design_default_color_on_primary"
                android:textColorHint="@color/color1t"
                android:textColorLink="@color/design_default_color_on_primary"
                android:textCursorDrawable="@color/design_default_color_background"
                android:visibility="visible"
                tools:layout_editor_absoluteX="296dp"
                tools:layout_editor_absoluteY="295dp"
                android:drawableStart="@drawable/ic_action_user"
                android:autofillHints="" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/edittext"
                android:drawableLeft="@drawable/ic_action_password"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="@color/design_default_color_background"
                android:textColorHint="@color/color1t"
                android:textColorLink="@color/design_default_color_background"
                android:textCursorDrawable="@color/design_default_color_on_primary"
                tools:layout_editor_absoluteX="249dp"
                tools:layout_editor_absoluteY="384dp"
                android:drawableStart="@drawable/ic_action_password"
                android:autofillHints="" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_marginTop="30dp"
                android:width="200dp"
                android:background="@drawable/ovalo"
                android:enabled="false"
                android:text="@string/action_sign_in"
                android:textColor="@color/card"
                android:textColorLink="@color/design_default_color_on_primary"
                android:textCursorDrawable="@color/design_default_color_on_primary"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="595dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ovalo1"
                android:text="@string/registrarse"
                android:textColor="@color/blanco"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/olvido_password"
                android:textColor="@color/blanco"
                android:textSize="14sp"
                app:fontFamily="@font/pt_mono"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="49dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/copyright"
            android:textColor="@color/blanco_opaco0"
            app:fontFamily="@font/pt_mono" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            android:text="@string/udc"
            android:textColor="@color/blanco_opaco0"
            app:fontFamily="@font/pt_mono" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>