<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.carpetamedica0.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_inicio">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.carpetamedica0.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.carpetamedica0.ui.gallery.GalleryFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.carpetamedica0.ui.slideshow.SlideshowFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_newdoc" />
    <fragment
        android:id="@+id/nav_papelera"
        android:name="com.example.carpetamedica0.nav_papelera"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_nav_papelera" />
    <fragment
        android:id="@+id/contacto"
        android:name="com.example.carpetamedica0.contacto"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_contacto" />
    <fragment
        android:id="@+id/configuracion"
        android:name="com.example.carpetamedica0.configuracion"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_configuracion" />
    <fragment
        android:id="@+id/compartir"
        android:name="com.example.carpetamedica0.compartir"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_compartir" />
    <fragment
        android:id="@+id/exit"
        android:name="com.example.carpetamedica0.exit"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_exit" />
</navigation>